--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "start": "cd web/public && serve",
     "webpack:dev": "webpack-dev-server --config webpack.config.js --mode development",
     "all": "npm-run-all --parallel lint:watch webpack:dev \"test -- --watch\"",
-    "lint": "node_modules/.bin/esw web/src/*",
-    "lint:watch": "sane \"node_modules/.bin/esw web/src/*\" \"web/src\"",
+    "lint": "node_modules/.bin/esw web/src",
+    "lint:watch": "sane \"node_modules/.bin/esw web/src\" \"web/src\"",
     "test": "jest"
   },
   "dependencies": {
+    "bootstrap": "^4.1.3",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.4",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-redux": "^5.1.0",
