--- a/.eslintrc
+++ b/.eslintrc
@@ -4,10 +4,11 @@
     "node": true,
     "es6": true,
     "browser": true,
-    "jest": true,
+    "jest": true
   },
   "parser": "babel-eslint",
   "rules": {
+    "no-restricted-globals": "off",
     "import/no-extraneous-dependencies": [
       "error",
       {
@@ -18,7 +19,6 @@
     "comma-dangle": ["error",{
       "functions": "ignore"
     }],
-    "no-param-reassign": "off",
     "no-shadow": "off",
     "import/no-named-as-default": "off",
     "jsx-a11y/label-has-associated-control": [
