--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.8",
+    "@fortawesome/free-solid-svg-icons": "^5.5.0",
+    "@fortawesome/react-fontawesome": "^0.1.3",
     "bootstrap": "^4.1.3",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
+    "notie": "^4.3.1",
     "popper.js": "^1.14.4",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
@@ -26,7 +30,8 @@
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
-    "serve": "^10.0.2"
+    "serve": "^10.0.2",
+    "validate.js": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
@@ -51,7 +56,6 @@
     "file-loader": "^2.0.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "husky": "^1.1.2",
     "jest": "^23.6.0",
     "npm-run-all": "^4.1.3",
     "prop-types": "^15.6.2",
