--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "postinstall": "npm run build",
     "build": "webpack --config webpack.config.js -p",
-    "start": "cd web/public && serve",
+    "start": "node serve.js",
     "webpack:dev": "webpack-dev-server --config webpack.config.js --mode development",
     "all": "npm-run-all --parallel lint:watch webpack:dev \"test -- --watch\"",
     "lint": "node_modules/.bin/esw web/src",
@@ -21,6 +21,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.5.0",
     "@fortawesome/react-fontawesome": "^0.1.3",
     "bootstrap": "^4.1.3",
+    "express": "^4.16.4",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "notie": "^4.3.1",
@@ -31,7 +32,6 @@
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
-    "serve": "^10.0.2",
     "validate.js": "^0.12.0"
   },
   "devDependencies": {
@@ -64,7 +64,6 @@
     "react-hot-loader": "^4.3.11",
     "redux-devtools-extension": "^2.13.5",
     "redux-mock-store": "^1.5.3",
-    "sane": "^4.0.1",
     "style-loader": "^0.23.1",
     "webpack": "^4.22.0",
     "webpack-cli": "^3.1.2",
