--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "file-loader": "^2.0.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^23.6.0",
     "npm-run-all": "^4.1.3",
     "prop-types": "^15.6.2",
